momentuHMM 1.4.0 2018-01-31
-----------------
NEW FEATURES

* von Mises consensus distribution of Rivest et al. (2016) can now be specified for angular data streams

* angleStrength function can now be used in circular-circular regression models. This allows each angular covariate (e.g. wind direction) to be weighted by an additional positive real covariate (e.g. wind speed) as in Rivest et al. (2016).

* checkPar0 function added to aid users with initial parameter (e.g. Par0, beta0, delta0) specification

* centroids argument added to MIfitHMM

* useInitial argument added to MIfitHMM for using parameter estimates of first model fit as initial values for all subsequent model fits

* AICweights function added for calculating AIC weights across a set of candidate models

* sample size (n) argument added to AIC.momentuHMM for calculating small sample corrected AIC (i.e. AICc)

CHANGES

* For multiple imputation analyses, pseudoRes (and plotPR) now calculate (and plot) pseudo-residuals individually for each model fit


momentuHMM 1.3.0 2017-12-06
-----------------
NEW FEATURES

* Dynamic activity centers (i.e., those with coordinates that can change over time) can now be handled via the centroids argument in prepData and simData. An example based on the group dynamic model of Langrock et al. (2014) has been added to the vignette.

* initialPosition argument in simData can now be specified as a list indicating the initial position for each individual

CHANGES

* multinomial logit link now used on zeroInflation and oneInflation parameters

* bug fix in calculation of pseudo-residuals (pseudoRes) with zeroInflation and/or oneInflation

* bug fix in CIreal when natural scale delta estimates are near boundary

* bug fix in crawlWrap when predTime is of length one

* bug fix in MIpool when initial distribution includes covariates

* splines and splines2 package dependencies changed to Suggests in DESCRIPTION file


momentuHMM 1.2.0 2017-10-19
-----------------
NEW FEATURES
