@@ -1,4 +1,4 @@
-momentuHMM 1.4.0 2018-01-31
+momentuHMM 1.4.0 2018-02-07
 -----------------
 NEW FEATURES
 
@@ -15,6 +15,8 @@ NEW FEATURES
 * AICweights function added for calculating AIC weights across a set of candidate models
 
 * sample size (n) argument added to AIC.momentuHMM for calculating small sample corrected AIC (i.e. AICc)
+
+* retrySD argument added to fitHMM and MIfitHMM for specifying standard deviation of random normal perturbations when using retryFits
 
 CHANGES
 
